--- a/CBSE.html
+++ b/CBSE.html
@@ -66,8 +66,16 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>R.S. Aggarwal Class 10</td>
+											<td><a href="https://drive.google.com/file/d/1NRs05iTYQOpCf-9EFNAbUltToCya39Cs/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>R.D. Sharma Class 10</td>
+											<td><a href="https://drive.google.com/file/d/1O5OpyCNr98bwYdDgyVaMzuvkR48b8a4i/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Term 2 All Books Of Mathematics</td>
+											<td><a href="https://drive.google.com/drive/folders/15ngG71NxVpfc1InnweslzpLf1HcGgtEB?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 									<br>	
@@ -88,8 +96,12 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>Term 2 All Books of Hindi</td>
+											<td><a href="https://drive.google.com/drive/folders/1ogtrTzUN59Vbt4TdsjZ3IUFan6D0iK5K?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Arihant All In One Hindi A</td>
+											<td><a href="https://drive.google.com/file/d/1IC52BGdNYFwpg5CJOtjpQvvLekpeZ3__/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 									<br>	
@@ -100,8 +112,8 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>All Term 2 Books Of English</td>
+											<td><a href="https://drive.google.com/drive/folders/1GXCK9AwONYebzTNydluW7bB7YfeeeHZA?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody><thead section id="five">
 										<tr>
