--- a/Accounts Books.html
+++ b/Accounts Books.html
@@ -74,8 +74,8 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>Term 2 Class 12</td>
+											<td><a href="https://drive.google.com/drive/folders/1vZv_iZyGHsOFlYUWgb36w6G1Q7t2olwy?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
