--- a/Business Studies Books.html
+++ b/Business Studies Books.html
@@ -73,8 +73,8 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>Term 2 Class 12</td>
+											<td><a href="https://drive.google.com/drive/folders/1uGKEDipAQBCl4GFCUV9psQRdfcKWKV_O?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
