--- a/Economics Books.html
+++ b/Economics Books.html
@@ -86,8 +86,12 @@
 											<td><a href="https://drive.google.com/file/d/1pDwK-qdhi_vvnXVU6qnrU9Obz8wk_Hlw/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 										<tr>
-											<td>Indian Ecnomics</td>
+											<td>Indian Economics</td>
 											<td><a href="https://drive.google.com/file/d/1pJeWa5grkppayhq-63UYgp1jYb7_d985/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Term 1 Class 12</td>
+											<td><a href="https://drive.google.com/drive/folders/1uLKShH1_CktPZr1-mH_YwumfiFM8S204?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
