Update Business Studies Books.html

--- a/Business Studies Books.html
+++ b/Business Studies Books.html
@@ -76,6 +76,10 @@
 											<td>Term 2 Class 12</td>
 											<td><a href="https://drive.google.com/drive/folders/1uGKEDipAQBCl4GFCUV9psQRdfcKWKV_O?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
+										<tr>
+											<td>Class 11 Book</td>
+											<td><a href="https://drive.google.com/file/d/1l2cIGWQN9BVOkLq3DEtHDRPA-AKyJprh/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
 									</tbody>
 								</table>
 							</div>
