Update Physical Education Books.html

--- a/Physical Education Books.html
+++ b/Physical Education Books.html
@@ -73,8 +73,12 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>Class 12 Term 2</td>
+											<td><a href="https://drive.google.com/drive/folders/1apGxktE0cVWGmmnHP6phyzyj1Hw-a4Tx?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>PHysical Education Class 12 Cbse</td>
+											<td><a href="https://drive.google.com/file/d/1kJn_947r6fDmyz1Q4EL9D6abZz3WmO_7/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
