--- a/Entrance Books.html
+++ b/Entrance Books.html
@@ -61,6 +61,10 @@
 									</thead>
 									<tbody>
 										<tr>
+											<td>Physics Wallah Neet Test Series</td>
+											<td><a href="https://drive.google.com/drive/folders/1nk_LmpZI9XP9o0eKm4A_Vf-XJ5XwNt4S?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
 											<td>Pearson IIT Foundation Series</td>
 											<td><a href="https://drive.google.com/drive/folders/1ZsfotrTCsLTwKgGFB6TXX5Z0OaPQfMGs?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
@@ -79,6 +83,10 @@
 										<tr>
 											<td>Jee Main January 2019 Solved Papers</td>
 											<td><a href="https://drive.google.com/file/d/1Xuf6XCDl8OP5ZYwxMMWBO-1MYN-8Ctci/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Arihant 43 Years PCM</td>
+											<td><a href="https://drive.google.com/drive/folders/1H2s417AeGxckD6PZgmCbgccY6tdUq74Y?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
