--- a/Physics Books.html
+++ b/Physics Books.html
@@ -135,6 +135,10 @@
 												<td>Ncert Physics Class 11&12</td>
 												<td><a href="https://drive.google.com/drive/folders/1M6U6Zmwa9suFYJEAP_NUiPx3zEVHUfl_?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
+											<tr>
+												<td>Term 2</td>
+												<td><a href="https://drive.google.com/folderview?id=1aDbdNS5Z3FEuQAvil61ltga1emtnAQx-" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
 										</tbody>
 									</table>
 								</div>
