--- a/Computer Books.html
+++ b/Computer Books.html
@@ -74,6 +74,10 @@
 									</thead>
 									<tbody>
 										<tr>
+											<td>Term 2 Computer Science Class 12 Books</td>
+											<td><a href="https://drive.google.com/drive/folders/1egI8jOe9cleiyPkfPJZkJz0lUK0WQCXA?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
 											<td>Term 1 Computer Science Class 12 Books</td>
 											<td><a href="https://drive.google.com/drive/folders/1MPPfQuATajsgOCxawu8ViiioJa_K6CoA?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
