--- a/English Books.html
+++ b/English Books.html
@@ -62,6 +62,18 @@
 									</thead>
 									<tbody>
 										<tr>
+											<td>Echoes A Collection Of ISC Short Stories</td>
+											<td><a href="https://drive.google.com/file/d/18XkkfGwWkIZZQAo4ot3J1CsJY1-J_TvQ/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Reverie A Collection Of ISC Poems</td>
+											<td><a href="https://drive.google.com/file/d/10tJp1u91_5Lo2KG5oE_kQYlY20Lb1AON/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Wren & Martin High School English Grammar</td>
+											<td><a href="https://drive.google.com/file/d/17E8sMzaQfN-wmGjBSXCcc-CqLz2U_dLS/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
 											<td>Place the book name here</td>
 											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
@@ -73,6 +85,18 @@
 										</tr>
 									</thead>
 									<tbody>
+										<tr>
+											<td>Xam Idea English Class 12 2019</td>
+											<td><a href="https://drive.google.com/file/d/1RqmOpM3QGoaY2k92W4MIU5SfxTWm8lmo/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Term 1 All Books Class 12-2022 edition</td>
+											<td><a href="https://drive.google.com/drive/folders/1uWaRIUpe6MnKaWfggcBGlhQSjNu0AJ2l?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Term 2 All Books Class 12-2022 edition</td>
+											<td><a href="https://drive.google.com/drive/folders/1Ig6rYCvOIThYvAJ99pspJIAPoottOJXv?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
 										<tr>
 											<td>Place the book name here</td>
 											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
